--- a/SkillConfig.json
+++ b/SkillConfig.json
@@ -409,7 +409,9 @@
     "level": 1,
     "para1": 3,
     "para2": 0.2,
-    "para3": 0.1
+    "para3": 3,
+    "para4": 0.1,
+    "para5": 1
   },
   {
     "id": 47,
@@ -419,7 +421,9 @@
     "level": 2,
     "para1": 5,
     "para2": 0.2,
-    "para3": 0.2
+    "para3": 3,
+    "para4": 0.2,
+    "para5": 1
   },
   {
     "id": 48,
@@ -429,7 +433,9 @@
     "level": 3,
     "para1": 10,
     "para2": 0.25,
-    "para3": 0.3
+    "para3": 3,
+    "para4": 0.3,
+    "para5": 1
   },
   {
     "id": 49,
