--- a/projectile.json
+++ b/projectile.json
@@ -7,7 +7,7 @@
     "id": 1,
     "name": "Red round projectile",
     "type": "SphereSkill",
-    "model": "Weapon/FireArrow",
+    "model": "Weapon/FlameFireball",
     "livetime": 5,
     "ignorewhencollidewithhero": false,
     "ignoredamagetohero": false,
