--- a/SkillConfig.json
+++ b/SkillConfig.json
@@ -63,7 +63,9 @@
     "para1": 0.01,
     "para2": 0.3,
     "para3": 0.0036,
-    "para4": 0
+    "para4": 0,
+    "para5": 0,
+    "para6": 0
   },
   {
     "id": 8,
@@ -75,7 +77,9 @@
     "para1": 0.01,
     "para2": 0.3,
     "para3": 0.00715,
-    "para4": 0
+    "para4": 0,
+    "para5": 0,
+    "para6": 0
   },
   {
     "id": 9,
@@ -87,7 +91,9 @@
     "para1": 0.01,
     "para2": 0.3,
     "para3": 0.01429,
-    "para4": 0
+    "para4": 0,
+    "para5": 0.3,
+    "para6": 10
   },
   {
     "id": 10,
@@ -96,7 +102,8 @@
     "description": "Attacking heal for %para1 damage dealt.",
     "type": "Neutral",
     "level": 1,
-    "para1": 0.1
+    "para1": 0.1,
+    "para2": 0
   },
   {
     "id": 11,
@@ -105,7 +112,8 @@
     "description": "Attacking heal for %para1 damage dealt.",
     "type": "Neutral",
     "level": 2,
-    "para1": 0.2
+    "para1": 0.2,
+    "para2": 0
   },
   {
     "id": 12,
@@ -114,7 +122,8 @@
     "description": "Attacking heal for %para1 damage dealt.",
     "type": "Neutral",
     "level": 3,
-    "para1": 0.5
+    "para1": 0.5,
+    "para2": 100
   },
   {
     "id": 13,
@@ -124,7 +133,9 @@
     "type": "Neutral",
     "level": 1,
     "para1": 5,
-    "para2": 1.2
+    "para2": 1.2,
+    "para3": 0,
+    "para4": 0
   },
   {
     "id": 14,
@@ -134,7 +145,9 @@
     "type": "Neutral",
     "level": 2,
     "para1": 5,
-    "para2": 1.5
+    "para2": 1.5,
+    "para3": 0,
+    "para4": 0
   },
   {
     "id": 15,
@@ -144,7 +157,9 @@
     "type": "Neutral",
     "level": 3,
     "para1": 5,
-    "para2": 2
+    "para2": 2,
+    "para3": 0.1,
+    "para4": 1
   },
   {
     "id": 16,
@@ -154,7 +169,11 @@
     "type": "Neutral",
     "level": 1,
     "para1": 5,
-    "para2": 0.2
+    "para2": 0.2,
+    "para3": 0,
+    "para4": 0,
+    "para5": 0,
+    "para6": 0
   },
   {
     "id": 17,
@@ -164,7 +183,11 @@
     "type": "Neutral",
     "level": 2,
     "para1": 5,
-    "para2": 0.25
+    "para2": 0.25,
+    "para3": 0,
+    "para4": 0,
+    "para5": 0,
+    "para6": 0
   },
   {
     "id": 18,
@@ -174,7 +197,11 @@
     "type": "Neutral",
     "level": 3,
     "para1": 5,
-    "para2": 0.5
+    "para2": 0.5,
+    "para3": 0.1,
+    "para4": 2,
+    "para5": 1.5,
+    "para6": 1
   },
   {
     "id": 19,
@@ -183,7 +210,9 @@
     "description": "Attacks slightly knockback enemies.",
     "type": "Neutral",
     "level": 1,
-    "para1": 1
+    "para1": 1,
+    "para2": 0,
+    "para3": 0
   },
   {
     "id": 20,
@@ -192,7 +221,9 @@
     "description": "Attacks moderately knockback enemies.",
     "type": "Neutral",
     "level": 2,
-    "para1": 1.5
+    "para1": 1.5,
+    "para2": 0,
+    "para3": 0
   },
   {
     "id": 21,
@@ -201,7 +232,9 @@
     "description": "Attacks greatly knockback enemies.",
     "type": "Neutral",
     "level": 3,
-    "para1": 2
+    "para1": 2,
+    "para2": 0.2,
+    "para3": 0.5
   },
   {
     "id": 22,
@@ -270,7 +303,8 @@
     "description": "Dashing deflects projectiles that deal %para1 their original damage.",
     "type": "Neutral",
     "level": 1,
-    "para1": 0.25
+    "para1": 0.25,
+    "para2": 3
   },
   {
     "id": 29,
@@ -279,7 +313,8 @@
     "description": "Dashing deflects projectiles that deal %para1 their original damage.",
     "type": "Neutral",
     "level": 2,
-    "para1": 0.5
+    "para1": 0.5,
+    "para2": 5
   },
   {
     "id": 30,
@@ -288,7 +323,8 @@
     "description": "Dashing deflects projectiles that deal %para1 their original damage.",
     "type": "Neutral",
     "level": 3,
-    "para1": 1
+    "para1": 1,
+    "para2": 10
   },
   {
     "id": 31,
