--- a/SkillConfig.json
+++ b/SkillConfig.json
@@ -240,7 +240,7 @@
     "id": 22,
     "weaponId": "N/A",
     "name": "Blazing Trail",
-    "description": "Upon dashing, leave behind a fiery trail that deals %para2 attack damage per second.",
+    "description": "Upon dashing, leave a fiery trail that deals %para2 attack damage per second.",
     "type": "Neutral",
     "level": 1,
     "para1": 5,
@@ -250,7 +250,7 @@
     "id": 23,
     "weaponId": "N/A",
     "name": "Blazing Trail",
-    "description": "Upon dashing, leave behind a fiery trail that deals %para2 attack damage per second.",
+    "description": "Upon dashing, leave a fiery trail that deals %para2 attack damage per second.",
     "type": "Neutral",
     "level": 2,
     "para1": 5,
@@ -260,7 +260,7 @@
     "id": 24,
     "weaponId": "N/A",
     "name": "Blazing Trail",
-    "description": "Upon dashing, leave behind a fiery trail that deals %para2 attack damage per second.",
+    "description": "Upon dashing, leave a fiery trail that deals %para2 attack damage per second.",
     "type": "Neutral",
     "level": 3,
     "para1": 5,
@@ -331,7 +331,8 @@
     "type": "Neutral",
     "level": 3,
     "para1": 4,
-    "para2": 10
+    "para2": 10,
+    "para3": 3
   },
   {
     "id": 31,
@@ -367,34 +368,31 @@
     "id": 34,
     "weaponId": "N/A",
     "name": "Conquest Smite",
-    "description": "Attacking inflicts Conquest stacks that deal %para1 attack damage when they detonate.",
+    "description": "Attacking inflicts Conquest stack that deal damage on detonatio.",
     "type": "Neutral",
     "level": 1,
-    "para1": 0.25,
-    "para2": 0.5,
-    "para3": 0.75
+    "para1": 2,
+    "para2": 0.5
   },
   {
     "id": 35,
     "weaponId": "N/A",
     "name": "Conquest Smite",
-    "description": "Attacking inflicts Conquest stacks that deal %para1 attack damage when they detonate.",
+    "description": "Attacking inflicts Conquest stack that deal damage on detonatio.",
     "type": "Neutral",
     "level": 2,
-    "para1": 0.5,
-    "para2": 0.75,
-    "para3": 1
+    "para1": 2,
+    "para2": 1
   },
   {
     "id": 36,
     "weaponId": "N/A",
     "name": "Conquest Smite",
-    "description": "Attacking inflicts Conquest stacks that deal %para1 attack damage when they detonate.",
+    "description": "Attacking inflicts Conquest stack that deal damage on detonatio.",
     "type": "Neutral",
     "level": 3,
-    "para1": 1,
-    "para2": 1.5,
-    "para3": 2
+    "para1": 3,
+    "para2": 2
   },
   {
     "id": 37,
@@ -643,7 +641,7 @@
     "id": 61,
     "weaponId": "N/A",
     "name": "Momentum",
-    "description": "Dashing increases attack by %para2 (max <para1 stacks)",
+    "description": "Dashing increases attack by %para2 (max <para1 stacks).",
     "type": "Melee",
     "level": 1,
     "para1": 10,
@@ -654,7 +652,7 @@
     "id": 62,
     "weaponId": "N/A",
     "name": "Momentum",
-    "description": "Dashing increases attack by %para2 (max <para1 stacks)",
+    "description": "Dashing increases attack by %para2 (max <para1 stacks).",
     "type": "Melee",
     "level": 2,
     "para1": 10,
@@ -665,7 +663,7 @@
     "id": 63,
     "weaponId": "N/A",
     "name": "Momentum",
-    "description": "Dashing increases attack by %para2 (max <para1 stacks)",
+    "description": "Dashing increases attack by %para2 (max <para1 stacks).",
     "type": "Melee",
     "level": 3,
     "para1": 10,
@@ -676,7 +674,7 @@
     "id": 64,
     "weaponId": "N/A",
     "name": "Rage",
-    "description": "Increase attack by %para2 per attack (max <para1 stacks)",
+    "description": "Increase attack by %para2 per attack (max <para1 stacks).",
     "type": "Melee",
     "level": 1,
     "para1": 5,
@@ -687,7 +685,7 @@
     "id": 65,
     "weaponId": "N/A",
     "name": "Rage",
-    "description": "Increase attack by %para2 per attack (max <para1 stacks)",
+    "description": "Increase attack by %para2 per attack (max <para1 stacks).",
     "type": "Melee",
     "level": 2,
     "para1": 5,
@@ -698,7 +696,7 @@
     "id": 66,
     "weaponId": "N/A",
     "name": "Rage",
-    "description": "Increase attack by %para2 per attack (max <para1 stacks)",
+    "description": "Increase attack by %para2 per attack (max <para1 stacks).",
     "type": "Melee",
     "level": 3,
     "para1": 5,
@@ -709,7 +707,7 @@
     "id": 67,
     "weaponId": "railgun",
     "name": "Turbo Charge",
-    "description": "Increase the charge speed of the railgun by %para1",
+    "description": "Increase the charge speed of the railgun by %para1.",
     "type": "Unique",
     "level": 1,
     "para1": 0.2
@@ -718,7 +716,7 @@
     "id": 68,
     "weaponId": "railgun",
     "name": "Turbo Charge",
-    "description": "Increase the charge speed of the railgun by  %para1",
+    "description": "Increase the charge speed of the railgun by  %para1.",
     "type": "Unique",
     "level": 2,
     "para1": 0.6
@@ -727,7 +725,7 @@
     "id": 69,
     "weaponId": "railgun",
     "name": "Turbo Charge",
-    "description": "The gun always shoots charged laser",
+    "description": "Railgun always shoots max-charged laser.",
     "type": "Unique",
     "level": 3
   },
@@ -735,7 +733,7 @@
     "id": 70,
     "weaponId": "wristcrossbow",
     "name": "Momentum Burst",
-    "description": "Increase %para1 damage for para2 hits after dashing",
+    "description": "After dashing, the next <para2 attacks deal additional %para1 attack damage.",
     "type": "Unique",
     "level": 1,
     "para1": 0.2,
@@ -745,7 +743,7 @@
     "id": 71,
     "weaponId": "wristcrossbow",
     "name": "Momentum Burst",
-    "description": "Increase %para1 damage for para2 hits after dashing",
+    "description": "After dashing, the next <para2 attacks deal additional %para1 attack damage.",
     "type": "Unique",
     "level": 2,
     "para1": 0.5,
@@ -755,7 +753,7 @@
     "id": 72,
     "weaponId": "wristcrossbow",
     "name": "Momentum Burst",
-    "description": "Increase %para1 damage for para2 hits after dashing",
+    "description": "After dashing, the next <para2 attacks deal additional %para1 attack damage.",
     "type": "Unique",
     "level": 3,
     "para1": 1,
@@ -765,7 +763,7 @@
     "id": 73,
     "weaponId": "firesword",
     "name": "Infernal Aura",
-    "description": "Dealing petty damage to enemies around the character",
+    "description": "Deal minor damage to surrounding enemies.",
     "type": "Unique",
     "level": 1,
     "para1": 0.15,
@@ -775,7 +773,7 @@
     "id": 74,
     "weaponId": "firesword",
     "name": "Infernal Aura",
-    "description": "Dealing intermediate damage to enemies around the character",
+    "description": "Deal moderate damage to surrounding enemies.",
     "type": "Unique",
     "level": 2,
     "para1": 0.3,
@@ -785,7 +783,7 @@
     "id": 75,
     "weaponId": "firesword",
     "name": "Infernal Aura",
-    "description": "Dealing superb damage to enemies around the character",
+    "description": "Deal huge damage to surrounding enemies.",
     "type": "Unique",
     "level": 3,
     "para1": 0.8,
@@ -795,7 +793,7 @@
     "id": 76,
     "weaponId": "moonlightsword",
     "name": "Lunar Blessing",
-    "description": "Slightly increase critical damage based on missing HP (cap at %para2 HP)",
+    "description": "Slightly increase critical damage based on missing HP (cap at %para2 HP).",
     "type": "Unique",
     "level": 1,
     "para1": 0.01,
@@ -805,7 +803,7 @@
     "id": 77,
     "weaponId": "moonlightsword",
     "name": "Lunar Blessing",
-    "description": "Moderately increase critical damage based missing HP (cap at %para2 HP)",
+    "description": "Moderately increase critical damage based on missing HP (cap at %para2 HP).",
     "type": "Unique",
     "level": 2,
     "para1": 0.015,
@@ -815,7 +813,7 @@
     "id": 78,
     "weaponId": "moonlightsword",
     "name": "Lunar Blessing",
-    "description": "Greatly increase critical damage based missing HP (cap at %para2 HP)",
+    "description": "Greatly increase critical damage based on missing HP (cap at %para2 HP).",
     "type": "Unique",
     "level": 3,
     "para1": 0.05,
@@ -824,122 +822,152 @@
   {
     "id": 79,
     "weaponId": "autocrossbow",
-    "description": "Killed enemies explode and deal petty damage to surrounding areas based on the number of wounds",
+    "name": "Corpse Bomb",
+    "description": "Enemies explode on death, dealing minor area damage.",
     "type": "Unique",
-    "level": 0.05,
-    "para1": 3
+    "level": 1,
+    "para1": 0.05,
+    "para2": 3
   },
   {
     "id": 80,
     "weaponId": "autocrossbow",
-    "description": "Killed enemies explode and deal intermediate damage to surrounding areas based on the number of wounds",
+    "name": "Corpse Bomb",
+    "description": "Enemies explode on death, dealing moderate area damage.",
     "type": "Unique",
-    "level": 0.1,
-    "para1": 4
+    "level": 2,
+    "para1": 0.1,
+    "para2": 4
   },
   {
     "id": 81,
     "weaponId": "autocrossbow",
-    "description": "Killed enemies explode and deal superb damage to surrounding areas based on the number of wounds",
+    "name": "Corpse Bomb",
+    "description": "Enemies explode on death, dealing huge area damage.",
     "type": "Unique",
-    "level": 0.2,
-    "para1": 5
+    "level": 3,
+    "para1": 0.2,
+    "para2": 5
   },
   {
     "id": 82,
     "weaponId": "angelscythe",
-    "description": "Normal enemies has %para1 chance to drop soul when killed",
+    "name": "Purgatory",
+    "description": "Normal enemies may drop a soul when killed.",
     "type": "Unique",
-    "level": 0.02
+    "level": 1,
+    "para1": 0.02
   },
   {
     "id": 83,
     "weaponId": "angelscythe",
-    "description": "Normal enemies has %para1 chance to drop soul when killed",
+    "name": "Purgatory",
+    "description": "Increase normal enemy soul drop rate.",
     "type": "Unique",
-    "level": 0.05
+    "level": 2,
+    "para1": 0.05
   },
   {
     "id": 84,
     "weaponId": "angelscythe",
-    "description": "Normal enemies has %para1 chance to drop soul when killed.  Heal %para2 HP when collect soul.",
+    "name": "Purgatory",
+    "description": "Increase normal enemy soul drop rate.  Heal upon collecting soul.",
     "type": "Unique",
-    "level": 0.1,
-    "para1": 0.05
+    "level": 3,
+    "para1": 0.1,
+    "para2": 0.05
   },
   {
     "id": 85,
     "weaponId": "minigun",
-    "description": "Each attack increase attack speed by %para1 for para2 seconds, max stack at para3.",
+    "name": "Bloodlust",
+    "description": "Attacking increases attack speed by %para1 (max <para3 stacks).",
     "type": "Unique",
-    "level": 0.1,
-    "para1": 2,
-    "para2": 5
+    "level": 1,
+    "para1": 0.1,
+    "para2": 2,
+    "para3": 5
   },
   {
     "id": 86,
     "weaponId": "minigun",
-    "description": "Each attack increase attack speed by %para1 for para2 seconds, max stack at para3.",
+    "name": "Bloodlust",
+    "description": "Attacking increases attack speed by %para1 (max <para3 stacks).",
     "type": "Unique",
-    "level": 0.3,
-    "para1": 2,
-    "para2": 5
+    "level": 2,
+    "para1": 0.3,
+    "para2": 2,
+    "para3": 5
   },
   {
     "id": 87,
     "weaponId": "minigun",
-    "description": "Each attack increase attack speed by %para1 for para2 seconds, max stack at para3.",
+    "name": "Bloodlust",
+    "description": "Attacking increases attack speed by %para1 (max <para3 stacks).",
     "type": "Unique",
-    "level": 0.5,
-    "para1": 2,
-    "para2": 5
+    "level": 3,
+    "para1": 0.5,
+    "para2": 2,
+    "para3": 5
   },
   {
     "id": 88,
     "weaponId": "lightbow",
-    "description": "Increase area of arrow rain by %para1 and damage by %para2",
+    "name": "Dazzling Light",
+    "description": "Increase area and damage of Arrow Barrage by %para1 and %para2.",
     "type": "Unique",
-    "level": 0.2,
-    "para1": 0.3,
-    "para2": 0.1
+    "level": 1,
+    "para1": 0.2,
+    "para2": 0.3,
+    "para3": 0.1
   },
   {
     "id": 89,
     "weaponId": "lightbow",
-    "description": "Increase area of arrow rain by %para1 and damage by %para2",
+    "name": "Dazzling Light",
+    "description": "Increase area and damage of Arrow Barrage by %para1 and %para2.",
     "type": "Unique",
-    "level": 0.4,
-    "para1": 0.6,
-    "para2": 0.1
+    "level": 2,
+    "para1": 0.4,
+    "para2": 0.6,
+    "para3": 0.1
   },
   {
     "id": 90,
     "weaponId": "lightbow",
-    "description": "Increase area of arrow rain by %para1 and damage by %para2",
+    "name": "Dazzling Light",
+    "description": "Increase area and damage of Arrow Barrage by %para1 and %para2.",
     "type": "Unique",
-    "level": 0.7,
-    "para1": 1,
-    "para2": 0.1
+    "level": 3,
+    "para1": 0.7,
+    "para2": 1,
+    "para3": 0.1
   },
   {
     "id": 91,
     "weaponId": "lightsword",
-    "description": "Increase sword flying speed by %para1",
+    "name": "Divine Impalement",
+    "description": "Increase sword flight speed by %para1.",
     "type": "Unique",
-    "level": 0.2
+    "level": 1,
+    "para1": 0.2
   },
   {
     "id": 92,
     "weaponId": "lightsword",
-    "description": "Increase sword flying speed by %para1",
+    "name": "Divine Impalement",
+    "description": "Increase sword flight speed by %para1.",
     "type": "Unique",
-    "level": 0.5
+    "level": 2,
+    "para1": 0.5
   },
   {
     "id": 93,
     "weaponId": "lightsword",
-    "description": "Increase sword flying speed by %para1",
+    "name": "Divine Impalement",
+    "description": "Increase sword flight speed by %para1.",
     "type": "Unique",
-    "level": 1
+    "level": 3,
+    "para1": 1
   }
 ]
